--- a/app/globals.css
+++ b/app/globals.css
@@ -163,3 +163,19 @@ code {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+}
+
+#mainApp {
+  animation: fade-in 0.5s ease forwards;
+}
