--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @import url("../styles/theme.css");
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: "Inter", sans-serif;
